<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Keyboard">

    <MultiAutoCompleteTextView
        android:id="@+id/TextEntry"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:maxLines="4"
        android:minLines="4"
        android:text="@string/default_text_string"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Q"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/w_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/E"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/E" />

    <Button
        android:id="@+id/E"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/e_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/R"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Q"
        app:layout_constraintTop_toTopOf="@+id/R" />

    <Button
        android:id="@+id/R"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/r_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/E"
        app:layout_constraintTop_toBottomOf="@+id/TextEntry" />

    <Button
        android:id="@+id/A"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/a_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/S"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q" />

    <Button
        android:id="@+id/S"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/s_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/D"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/A"
        app:layout_constraintTop_toTopOf="@+id/A" />

    <Button
        android:id="@+id/D"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/d_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/F"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/S"
        app:layout_constraintTop_toTopOf="@+id/S" />

    <Button
        android:id="@+id/F"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="onClickClear"
        android:text="@string/f_string"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/D"
        app:layout_constraintTop_toTopOf="@+id/D" />

    <EditText
        android:id="@+id/ClassNumber"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>